[package]
name = "programmable-parameter-demo"
version = "0.1.0"
edition = "2021"
default-run = "programmable-parameter-demo"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
wasmtime = "38"
wat = "1"
